--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-ipdb = "*"
-flask = "*"
-flask-sqlalchemy = "*"
-flask-migrate = "*"
-sqlalchemy-serializer = "*"
-flask-restful = "*"
-flask-cors = "*"
-faker = "*"
-flask-bcrypt = "*"
-python-dotenv = "*"
+ipdb == "*"
+flask == "*"
+flask-sqlalchemy == "*"
+flask-migrate == "*"
+sqlalchemy-serializer == "*"
+flask-restful == "*"
+flask-cors == "*"
+faker == "*"
+flask-bcrypt == "*"
+python-dotenv == "*"
