--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask == "*"
-flask-sqlalchemy == "*"
-flask-migrate == "*"
-sqlalchemy-serializer == "*"
-flask-restful == "*"
-flask-cors == "*"
-faker == "*"
-flask-bcrypt == "*"
-python-dotenv == "*"
+ipdb 
+flask 
+flask-sqlalchemy 
+flask-migrate 
+sqlalchemy-serializer 
+flask-restful 
+flask-cors 
+faker 
+flask-bcrypt 
+python-dotenv 
